updating data and visual - 1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Conheça Willian J M L</title>
+  <title>Conheça Willian J M Lourenço</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -85,12 +85,12 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="contact-section bg-black">
-    <div class="container">
+  <section id="skills" class="skills-section bg-black">
+    <div class="container py-5">
 
       <div class="row">
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 my-3">
           <div class="card py-2 h-100">
             <div class="card-body text-center">
               <i class="fab fa-html5 text-primary mb-4"></i>
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 my-3">
           <div class="card py-2 h-100">
             <div class="card-body text-center">
               <i class="fab fa-css3-alt text-primary mb-4"></i>
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 my-3">
           <div class="card py-2 h-100">
             <div class="card-body text-center">
               <i class="fab fa-js text-primary mb-4"></i>
@@ -117,7 +117,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 my-3">
           <div class="card py-2 h-100">
             <div class="card-body text-center">
               <i class="fab fa-node-js text-primary mb-4"></i>
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 my-3">
           <div class="card py-2 h-100">
             <div class="card-body text-center">
               <i class="fab fa-java text-primary mb-4"></i>
