adding contact information

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">Av. José H. de Almeida Camargo, 1354 - Nova Andradina/MS </div>
             </div>
           </div>
         </div>
@@ -243,7 +243,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">willianj16@gmail.com</a>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+55 (67) 99114-2385</div>
             </div>
           </div>
         </div>
