--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right
-            now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
-            source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Eu</h2>
+          <p class="text-white-50">Falar algo sobre mim aqui</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -229,7 +226,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Endereço</h4>
               <hr class="my-4">
               <div class="small text-black-50">Av. José H. de Almeida Camargo, 1354 - Nova Andradina/MS </div>
             </div>
@@ -253,7 +250,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <h4 class="text-uppercase m-0">Telefone</h4>
               <hr class="my-4">
               <div class="small text-black-50">+55 (67) 99114-2385</div>
             </div>
