adding skills card to future updating

--- a/index.html
+++ b/index.html
@@ -132,6 +132,33 @@
           </div>
         </div>
 
+        <div class="col-md-3 my-3">
+          <div class="card py-2 h-100">
+            <div class="card-body text-center">
+              <i class="fab fa-question text-primary mb-4"></i>
+              <h4 class="text-uppercase">MySQL</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 my-3">
+          <div class="card py-2 h-100">
+            <div class="card-body text-center">
+              <i class="fab fa-question text-primary mb-4"></i>
+              <h4 class="text-uppercase">Photoshop</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 my-3">
+          <div class="card py-2 h-100">
+            <div class="card-body text-center">
+              <i class="fab fa-question text-primary mb-4"></i>
+              <h4 class="text-uppercase">Pacote Office</h4>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
     </div>
